add new products

--- a/index.html
+++ b/index.html
@@ -67,7 +67,37 @@
                 <img src="img/products/Tenis_Gazelle_Rosa_H01512_01_standard.avif" alt="Tenis Gazelle Rosa">
                 <h3>Tenis Gazelle</h3>
                 <p>$1,349.00</p>
-            </article>                        
+            </article>
+            <article>
+                <img src="img/products/jersey-visitante-messi-inter-miami-cf-25-26.avif" alt="Negro Jersey Visitante Messi Inter Miami CF 25/26">
+                <h3>Jersey Visitante Messi Inter Miami CF 25/26</h3>
+                <p>$1,899.00</p>
+            </article>
+            <article>
+                <img src="img/products/playera-padel-category-aeroready-estampada.avif" alt="Azul Playera Padel Category AEROREADY Estampada">
+                <h3>Playera Padel Category AEROREADY Estampada</h3>
+                <p>$699.00</p>
+            </article>
+            <article>
+                <img src="img/products/tuanl-dna-pnt.avif" alt="Blanco TUANL DNA PNT">
+                <h3>TUANL DNA PNT</h3>
+                <p>$1,299.00</p>
+            </article>
+            <article>
+                <img src="img/products/Playera_Prepartido_Real_Madrid_24-25_Blanco_JJ3493_21_model.avif" alt="Blanco Playera Prepartido Real Madrid 24/25">
+                <h3>Playera Prepartido Real Madrid 24/25</h3>
+                <p>$1,599.00</p>
+            </article>
+            <article>
+                <img src="img/products/SUPERSTAR_II_Blanco_JQ4728_01_00_standard.avif" alt="Blanco SUPERSTAR II">
+                <h3>SUPERSTAR II</h3>
+                <p>$2,299.00</p>
+            </article>
+            <article>
+                <img src="img/products/Tacos_Samba_Messi_Rosa_JP7844_22_model.avif" alt="Rosa Tacos Samba Messi">
+                <h3>Tacos Samba Messi</h3>
+                <p>$2,299.00</p>
+            </article>
         </section>
 
         <section class="cart">
